# OZTF

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.scss  App.tsx  global-no-select.css  global.d.ts  main.ts  middle.tsx  router.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/@tauri-apps/api/: tauri.tsx
src/Components/Alert/: Alert.scss  Alert.tsx
src/Components/AnimationNumberText/: AnimationNumberText.scss  AnimationNumberText.tsx
src/Components/Drawer/: Drawer.tsx
src/Components/Echarts/: Echarts.scss  Echarts.tsx
src/Components/Excalidraw/: Excalidraw.scss  Excalidraw.tsx
src/Components/Loading/: Loading.scss
src/Components/Message/: Message.scss
src/Components/Paginition/: Paginition.scss  Paginition.tsx
src/Components/Popup/: Popup.scss  Popup.tsx
src/Components/PreviewPDF/: PreviewPDF.scss  PreviewPDF.tsx
src/Components/Qrcode/: Qrcode.scss  Qrcode.tsx
src/Components/Svg/: Svg.tsx
src/Components/Table/: Table.scss  Table.tsx
src/Components/VideoPlayer/: VideoPlayer.scss  VideoPlayer.tsx
src/Scripts/: VLoading.ts
src/Utils/: Date.ts  GlobalConfig.ts  HighFrequencyControl.ts  IconPath.ts  MessageHook.ts  Network.ts  PopupHook.ts  Storage.ts  Timer.ts  Token.ts  WebSocket.ts
src/Utils/Meet/: LibGenerateTestUserSig.ts  TRTC.ts
src/Utils/NFC/: Nfc.ts  TauriOptimizer.ts
src/Utils/TRTC/: TRTC.ts
src/Views/: Login.scss  Login.tsx  Main.scss  Main.tsx
(+92 files in other folders)
