[package]
name = "back-manage-system"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "back_manage_system_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "macos-private-api", "tray-icon" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-shadows = "0.2.2"
window-vibrancy = "0.6.0"
pcsc = "2.9.0"
hex = "0.4.0"
objc2 = "0.6.1"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
scopeguard = "1.2"
lazy_static = "1.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

